--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@maersk-global/fonts": "^1.3.0",
+    "@maersk-global/mds-components-core": "^1.20.0",
+    "@maersk-global/mds-foundations": "^1.20.0",
+    "@maersk-global/mds-react-web-components": "^1.20.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
